@@ -218,3 +218,7 @@ type tree_model_flags = "GTK_TREE_MODEL_"
 
 type protect HASGTK24 file_filter_flags = "GTK_FILE_FILTER_"
   [ `FILENAME | `URI | `DISPLAY_NAME | `MIME_TYPE ]
+
+type protect HASGTK24 ui_manager_item_type = "GTK_UI_MANAGER_"
+  [ `AUTO | `MENUBAR | `MENU | `TOOLBAR | `PLACEHOLDER
+  | `POPUP | `MENUITEM | `TOOLITEM | `SEPARATOR | `ACCELERATOR ]
