@@ -32,6 +32,7 @@ CAMLprim value ml_gtkaction_init(value unit)
 #ifdef HASGTK24
 
 #define gobject_list_of_GSList(l) Val_GSList(l, (value_in) Val_GObject)
+#define gobject_list_of_GSList_free(l)  Val_GSList_free (l, (value_in) Val_GObject)
 #define gobject_list_of_GList(l)  Val_GList (l, (value_in) Val_GObject)
 #define gobject_list_of_GList_free(l)  Val_GList_free (l, (value_in) Val_GObject)
 
@@ -45,6 +46,10 @@ ML_1 (gtk_action_get_proxies, GtkAction_val, gobject_list_of_GSList)
 ML_1 (gtk_action_connect_accelerator, GtkAction_val, Unit)
 ML_1 (gtk_action_disconnect_accelerator, GtkAction_val, Unit)
 ML_2 (gtk_action_set_accel_path, GtkAction_val, String_val, Unit)
+ML_1 (gtk_action_is_sensitive, GtkAction_val, Val_bool)
+ML_1 (gtk_action_is_visible, GtkAction_val, Val_bool)
+ML_2 (gtk_action_block_activate_from, GtkAction_val, GtkWidget_val, Unit)
+ML_2 (gtk_action_unblock_activate_from, GtkAction_val, GtkWidget_val, Unit)
 
 /* gtktoggleaction.h */
 #define GtkToggleAction_val(val) check_cast(GTK_TOGGLE_ACTION, val)
@@ -70,6 +75,7 @@ ML_1 (gtk_radio_action_get_current_value, GtkRadioAction_val, Val_int)
 ML_2 (gtk_action_group_get_action, GtkActionGroup_val, String_val, Val_GAnyObject)
 ML_1 (gtk_action_group_list_actions, GtkActionGroup_val, gobject_list_of_GList_free)
 ML_2 (gtk_action_group_add_action, GtkActionGroup_val, GtkAction_val, Unit)
+ML_3 (gtk_action_group_add_action_with_accel, GtkActionGroup_val, GtkAction_val, String_val, Unit)
 ML_2 (gtk_action_group_remove_action, GtkActionGroup_val, GtkAction_val, Unit)
 
 
@@ -94,6 +100,8 @@ CAMLprim value ml_gtk_ui_manager_add_ui_from_file(value uim, value s)
 ML_2 (gtk_ui_manager_remove_ui, GtkUIManager_val, Int_val, Unit)
 ML_1 (gtk_ui_manager_ensure_update, GtkUIManager_val, Unit)
 /* ML_1 (gtk_ui_manager_new_merge_id, GtkUIManager_val, Val_int) */
+Make_Flags_val(Ui_manager_item_type_val)
+ML_2 (gtk_ui_manager_get_toplevels, GtkUIManager_val, Flags_Ui_manager_item_type_val, gobject_list_of_GSList_free)
 
 #else /* HASGTK24 */
 
@@ -104,6 +112,10 @@ Unsupported_24(gtk_action_get_proxies)
 Unsupported_24(gtk_action_connect_accelerator)
 Unsupported_24(gtk_action_disconnect_accelerator)
 Unsupported_24(gtk_action_set_accel_path)
+Unsupported_24(gtk_action_is_sensitive)
+Unsupported_24(gtk_action_is_visible)
+Unsupported_24(gtk_action_block_activate_from)
+Unsupported_24(gtk_action_unblock_activate_from)
 Unsupported_24(gtk_toggle_action_toggled)
 Unsupported_24(gtk_toggle_action_set_active)
 Unsupported_24(gtk_toggle_action_get_active)
@@ -112,12 +124,14 @@ Unsupported_24(gtk_radio_action_get_current_value)
 Unsupported_24(gtk_action_group_get_action)
 Unsupported_24(gtk_action_group_list_actions)
 Unsupported_24(gtk_action_group_add_action)
+Unsupported_24(gtk_action_group_add_action_with_accel)
 Unsupported_24(gtk_action_group_remove_action)
 Unsupported_24(gtk_ui_manager_insert_action_group)
 Unsupported_24(gtk_ui_manager_remove_action_group)
 Unsupported_24(gtk_ui_manager_get_action_groups)
 Unsupported_24(gtk_ui_manager_get_accel_group)
 Unsupported_24(gtk_ui_manager_get_widget)
+Unsupported_24(gtk_ui_manager_get_toplevels)
 Unsupported_24(gtk_ui_manager_get_action)
 Unsupported_24(gtk_ui_manager_add_ui_from_string)
 Unsupported_24(gtk_ui_manager_add_ui_from_file)
